# auto_trading

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: current_universe.csv  krx_holidays.csv  krx_holidays.sample.csv  universe_master.csv  universe_master.sample.csv
docs/: auto_trading_eod_rest_reconcile_plan_v0_1.md  auto_trading_exit_data_quality_spec_v0_1.md  auto_trading_manual_intervention_runbook_v0_1.md  auto_trading_missed_entry_reason_spec_v0_1.md  auto_trading_prd.md  auto_trading_real_ops_checklist_v0_1.md  auto_trading_rest_migration_plan_v0_1.md  auto_trading_rest_ops_checklist_v0_1.md  auto_trading_rest_todo_v0_2.md  auto_trading_runbook_v0_1.md  auto_trading_scheduler_and_orchestrator_guide_v0_1.md  auto_trading_technical_spec_v0_1.md  auto_trading_todo_v0_1.md  auto_trading_ws_responsibility_spec_v0_1.md
scripts/: backfill_realized_pnl.ps1  backfill_realized_pnl.py  diagnose_ma5_reentry_scores.ps1  diagnose_ma5_reentry_scores.py  diagnose_market_data_refresh.ps1  diagnose_market_data_refresh.py  force_broker_sync.ps1  force_broker_sync.py  generate_holiday_calendar.py  generate_universe_master.py  reconcile_eod_fills.ps1  reconcile_eod_fills.py  show_auto_trading_dashboard.ps1  show_daily_report.ps1  show_daily_report.py  show_realized_pnl.ps1  show_realized_pnl.py  show_runtime_dashboard.py  show_strategy_targets.ps1  show_strategy_targets.py  start_auto_trading.ps1  status_auto_trading.ps1  stop_auto_trading.ps1
src/auto_trading/: __init__.py  __main__.py
tests/fixtures/: current_universe.csv  kis_order_notice.json  (+2 more)
(+66 files in other folders)
